feat(solana-programs): update pre/post drip (#128)
